--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/cursor.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://Scenes/", "res://lib/", "res://lib/sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/camera.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://lib/", "res://lib/player_sprites/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,11 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/cursor.tscn", "res://Scenes/player.tscn")
-current_scene="res://Scenes/player.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/cursor.tscn", "res://scenes/player.tscn", "res://scenes/footprints.tscn")
+current_scene="res://scenes/world.tscn"
+center_split_offset=-377
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -43,9 +44,9 @@ position=Vector2i(1281, 31)
 
 [ScriptEditor]
 
-open_scripts=["res://src/CursorManager.gd"]
-selected_script="res://src/CursorManager.gd"
-open_help=[]
+open_scripts=["res://src/camera.gd", "res://src/CursorManager.gd", "res://src/footprint.gd", "res://src/input_abstraction.gd", "res://src/player.gd", "res://src/playerStateMachine.gd"]
+selected_script="res://src/camera.gd"
+open_help=["AnimatedSprite3D"]
 script_split_offset=100
 list_split_offset=0
 zoom_factor=1.0
