--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/camera.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://lib/", "res://lib/player_sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://lib/dog_sprites/", "res://lib/dog_sprites/default_dog/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/cursor.tscn", "res://scenes/player.tscn", "res://scenes/footprints.tscn")
-current_scene="res://scenes/world.tscn"
+open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/cursor.tscn", "res://scenes/player.tscn", "res://scenes/footprints.tscn", "res://scenes/dog.tscn")
+current_scene="res://scenes/player.tscn"
 center_split_offset=-377
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
@@ -45,7 +45,7 @@ position=Vector2i(1281, 31)
 [ScriptEditor]
 
 open_scripts=["res://src/camera.gd", "res://src/CursorManager.gd", "res://src/footprint.gd", "res://src/input_abstraction.gd", "res://src/player.gd", "res://src/playerStateMachine.gd"]
-selected_script="res://src/camera.gd"
+selected_script="res://src/player.gd"
 open_help=["AnimatedSprite3D"]
 script_split_offset=100
 list_split_offset=0
