--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://lib/dog_sprites/", "res://lib/dog_sprites/default_dog/")
+dock_filesystem_selected_paths=PackedStringArray("res://lib/player_sprites/ShirtTemplate.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/resources/", "res://scenes/", "res://lib/", "res://lib/player_sprites/", "res://lib/dog_sprites/default_dog/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,19 +28,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/cursor.tscn", "res://scenes/player.tscn", "res://scenes/footprints.tscn", "res://scenes/dog.tscn")
+open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn", "res://scenes/dog.tscn", "res://scenes/cursor.tscn")
 current_scene="res://scenes/player.tscn"
 center_split_offset=-377
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
+mode="maximized"
 size=Vector2i(1278, 1048)
-position=Vector2i(1281, 31)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
