--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,5 @@
 [selected_history]
 
 Texture2D=PackedStringArray("uid://l7ctrobglhcy")
+MeshLibrary=PackedStringArray("uid://csihsrqkgpyyb")
+NavigationMesh=PackedStringArray("uid://dfjdjap6mdul")
