Shaders and Interactions

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,9 +9,9 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://lib/player_sprites/ShirtTemplate.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/resources/", "res://scenes/", "res://lib/", "res://lib/player_sprites/", "res://lib/dog_sprites/default_dog/")
-dock_node_current_tab=0
+dock_filesystem_selected_paths=PackedStringArray("res://lib/PrStart.ttf")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://lib/", "res://lib/sounds/", "res://lib/dog_sprites/default_dog/")
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -28,25 +28,25 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn", "res://scenes/dog.tscn", "res://scenes/cursor.tscn")
+open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn")
 current_scene="res://scenes/player.tscn"
-center_split_offset=-377
-selected_default_debugger_tab_idx=0
+center_split_offset=-345
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
+mode="windowed"
 size=Vector2i(1278, 1048)
-position=Vector2i(0, 23)
+position=Vector2i(1281, 31)
 
 [ScriptEditor]
 
-open_scripts=["res://src/camera.gd", "res://src/CursorManager.gd", "res://src/footprint.gd", "res://src/input_abstraction.gd", "res://src/player.gd", "res://src/playerStateMachine.gd"]
-selected_script="res://src/player.gd"
-open_help=["AnimatedSprite3D"]
+open_scripts=["res://src/camera.gd", "res://src/interactable_object.gd", "res://src/player.gd"]
+selected_script="res://src/interactable_object.gd"
+open_help=[]
 script_split_offset=100
 list_split_offset=0
 zoom_factor=1.0
@@ -58,7 +58,17 @@ floating_window_screen=0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://lib/shaders/snowfall.gdshader", "res://lib/shaders/water.gdshader"]
 split_offset=200
-selected_shader=""
+selected_shader="res://lib/shaders/water.gdshader"
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
