--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -3,3 +3,6 @@
 Texture2D=PackedStringArray("uid://l7ctrobglhcy")
 MeshLibrary=PackedStringArray("uid://csihsrqkgpyyb")
 NavigationMesh=PackedStringArray("uid://dfjdjap6mdul")
+SpriteFrames=PackedStringArray("uid://b01jn2hn4t6x0", "uid://cwn2kaakqcbox")
+Shader=PackedStringArray("uid://bp5fbegcyw6ft", "uid://dei5an5jd1qxu")
+Font=PackedStringArray("uid://chge5u0vr77t8")
