--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://lib/PrStart.ttf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://lib/", "res://lib/sounds/", "res://lib/dog_sprites/default_dog/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/CursorManager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://lib/weapon_sprites/", "res://lib/sounds/", "res://lib/dog_sprites/default_dog/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,24 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn")
+open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn", "res://scenes/cursor.tscn")
 current_scene="res://scenes/player.tscn"
 center_split_offset=-345
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
+mode="maximized"
 size=Vector2i(1278, 1048)
-position=Vector2i(1281, 31)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://src/camera.gd", "res://src/interactable_object.gd", "res://src/player.gd"]
-selected_script="res://src/interactable_object.gd"
+open_scripts=["res://src/camera.gd", "res://src/CursorManager.gd", "res://src/input_abstraction.gd", "res://src/interactable_object.gd", "res://src/player.gd", "res://src/playerStateMachine.gd"]
+selected_script="res://src/player.gd"
 open_help=[]
 script_split_offset=100
 list_split_offset=0
