--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,17 +1,3 @@
-[res://src/playerStateMachine.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 17,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 28,
-"scroll_position": 7.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://src/input_abstraction.gd]
 
 state={
@@ -35,21 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://src/CursorManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 28,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 24,
-"scroll_position": 16.0,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -61,9 +33,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 21,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 197,
 "row": 90,
-"scroll_position": 86.0,
+"scroll_position": 90.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +59,109 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 16,
+"row": 9,
+"scroll_position": 9.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/resources/item.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/cursor_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/player_state_machine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
 "row": 28,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/interfaces/inventory_data.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/interfaces/ui_basic.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/interfaces/user_interface.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 67,
+"row": 45,
+"scroll_position": 23.999999999999996,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/interfaces/inventory_ui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 18,
+"scroll_position": 37.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
