--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,17 @@
-list=[]
+list=[{
+"base": &"Resource",
+"class": &"InventoryData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://src/interfaces/inventory_data.gd"
+}, {
+"base": &"Resource",
+"class": &"ItemResource",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://src/resources/item.gd"
+}]
