--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/interfaces/user_interface.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/resources/", "res://src/interfaces/", "res://lib/sounds/", "res://lib/dog_sprites/default_dog/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/interfaces/inventory_data.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/interfaces/", "res://lib/", "res://lib/items/", "res://lib/dog_sprites/default_dog/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,23 +29,23 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn", "res://scenes/cursor.tscn", "res://scenes/user_interface.tscn")
-current_scene="res://scenes/world.tscn"
+current_scene="res://scenes/user_interface.tscn"
 center_split_offset=-267
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
+mode="maximized"
 size=Vector2i(1278, 1048)
-position=Vector2i(1281, 31)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://src/interfaces/inventory_ui.gd", "res://src/interfaces/user_interface.gd"]
-selected_script="res://src/interfaces/user_interface.gd"
+open_scripts=["res://src/interfaces/inventory_data.gd", "res://src/interfaces/inventory_ui.gd", "res://src/resources/item.gd", "res://src/interfaces/ui_basic.gd", "res://src/interfaces/user_interface.gd"]
+selected_script="res://src/interfaces/inventory_ui.gd"
 open_help=[]
 script_split_offset=174
 list_split_offset=0
