Controller Support for Inventory, and stacks

--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -6,4 +6,5 @@ SpriteFrames=PackedStringArray("uid://b01jn2hn4t6x0", "uid://cwn2kaakqcbox")
 Shader=PackedStringArray("uid://bp5fbegcyw6ft", "uid://dei5an5jd1qxu")
 Font=PackedStringArray("uid://chge5u0vr77t8")
 Script=PackedStringArray("uid://brgwvh0gybyb8")
-Texture2D=PackedStringArray("uid://dykmui58ijx4b", "uid://xcr2xgiijwhu", "uid://doqp6rupqe7uw")
+Texture2D=PackedStringArray("uid://ccvy42bbwhq5l", "uid://dykmui58ijx4b", "uid://xcr2xgiijwhu", "uid://doqp6rupqe7uw")
+ItemResource=PackedStringArray("uid://doos0pshm1w62", "uid://btiwdahn68jba")
