--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -59,12 +59,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 16,
-"row": 9,
-"scroll_position": 9.0,
-"selection": false,
+"h_scroll_position": 0,
+"row": 47,
+"scroll_position": 23.999999999999996,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 47,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,12 +77,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 12,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 12,
+"selection_to_column": 19,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -115,12 +123,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 14,
+"selection_from_line": 6,
+"selection_to_column": 15,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -143,11 +155,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 0.0,
+"row": 48,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -157,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 124,
-"scroll_position": 113.0,
+"row": 612,
+"scroll_position": 591.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
