--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 12.0,
+"row": 25,
+"scroll_position": 15.999999999999996,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 85,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 197,
-"row": 90,
-"scroll_position": 90.0,
-"selection": false,
+"h_scroll_position": 32,
+"row": 55,
+"scroll_position": 41.0,
+"selection": true,
+"selection_from_column": 42,
+"selection_from_line": 55,
+"selection_to_column": 85,
+"selection_to_line": 55,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 47,
-"scroll_position": 23.999999999999996,
+"scroll_position": 26.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 0,
@@ -109,11 +113,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 0.0,
+"row": 70,
+"scroll_position": 54.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -174,6 +178,62 @@ state={
 "h_scroll_position": 0,
 "row": 612,
 "scroll_position": 591.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/enemies/basic_enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 35,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 149,
+"scroll_position": 127.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/enemies/long_range_enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 48,
+"scroll_position": 27.999999999999996,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/enemies/melee_diver_enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 22.999999999999996,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/enemies/hybrid_enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 39,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 35,
+"scroll_position": 12.999999999999996,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
