--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,20 @@
 list=[{
+"base": &"CharacterBody3D",
+"class": &"BaseEnemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://src/enemies/basic_enemy.gd"
+}, {
+"base": &"BaseEnemy",
+"class": &"HybridEnemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://src/enemies/hybrid_enemy.gd"
+}, {
 "base": &"Resource",
 "class": &"InventoryData",
 "icon": "",
@@ -14,4 +30,20 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://src/resources/item.gd"
+}, {
+"base": &"BaseEnemy",
+"class": &"LongRangeEnemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://src/enemies/long_range_enemy.gd"
+}, {
+"base": &"BaseEnemy",
+"class": &"MeleeDiverEnemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://src/enemies/melee_diver_enemy.gd"
 }]
