--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://lib/items/money.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://lib/", "res://lib/ui_sprites/", "res://lib/items/", "res://lib/dog_sprites/default_dog/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/long_range_enemy.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/enemies/", "res://scenes/", "res://lib/dog_sprites/default_dog/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn", "res://scenes/user_interface.tscn")
+open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn")
 current_scene="res://scenes/world.tscn"
 center_split_offset=-267
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
@@ -44,8 +44,8 @@ position=Vector2i(1281, 31)
 
 [ScriptEditor]
 
-open_scripts=["res://src/interactable_object.gd", "res://src/interfaces/inventory_data.gd", "res://src/interfaces/inventory_ui.gd", "res://src/resources/item.gd", "res://src/interfaces/ui_basic.gd", "res://src/interfaces/user_interface.gd"]
-selected_script="res://src/interfaces/inventory_ui.gd"
+open_scripts=["res://src/enemies/basic_enemy.gd", "res://src/camera.gd", "res://src/enemies/hybrid_enemy.gd", "res://src/interactable_object.gd", "res://src/enemies/long_range_enemy.gd", "res://src/enemies/melee_diver_enemy.gd", "res://src/player.gd", "res://src/player_state_machine.gd"]
+selected_script="res://src/enemies/basic_enemy.gd"
 open_help=[]
 script_split_offset=174
 list_split_offset=0
