Combat and some shaders

--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -3,8 +3,8 @@
 MeshLibrary=PackedStringArray("uid://csihsrqkgpyyb")
 NavigationMesh=PackedStringArray("uid://dfjdjap6mdul")
 SpriteFrames=PackedStringArray("uid://b01jn2hn4t6x0", "uid://cwn2kaakqcbox")
-Shader=PackedStringArray("uid://bp5fbegcyw6ft", "uid://dei5an5jd1qxu")
+Shader=PackedStringArray("uid://dei5an5jd1qxu", "uid://bidokee1xos07", "uid://owgp7nodspow", "uid://bp5fbegcyw6ft", "uid://xnul2rn51t7y")
 Font=PackedStringArray("uid://chge5u0vr77t8")
-Script=PackedStringArray("uid://brgwvh0gybyb8")
-Texture2D=PackedStringArray("uid://ccvy42bbwhq5l", "uid://dykmui58ijx4b", "uid://xcr2xgiijwhu", "uid://doqp6rupqe7uw")
+Script=PackedStringArray("uid://cviergfygvp8s", "uid://brgwvh0gybyb8")
+Texture2D=PackedStringArray("uid://xcr2xgiijwhu", "uid://ccvy42bbwhq5l", "uid://dykmui58ijx4b", "uid://doqp6rupqe7uw")
 ItemResource=PackedStringArray("uid://doos0pshm1w62", "uid://btiwdahn68jba")
