--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -2,10 +2,14 @@
 
 groups=[&"interactables"]
 
+[res://scenes/base_enemy.tscn]
+
+groups=[&"enemy"]
+
 [res://scenes/player.tscn]
 
 groups=[&"player"]
 
-[res://scenes/base_enemy.tscn]
+[res://scenes/world.tscn]
 
 groups=[&"enemy"]
