--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,9 +9,9 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/long_range_enemy.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/enemies/", "res://scenes/", "res://lib/dog_sprites/default_dog/")
-dock_node_current_tab=0
+dock_filesystem_selected_paths=PackedStringArray("res://lib/shaders/snowfall.gdshader")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://lib/", "res://lib/shaders/", "res://lib/dog_sprites/default_dog/")
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn")
+open_scenes=PackedStringArray("res://scenes/world.tscn")
 current_scene="res://scenes/world.tscn"
-center_split_offset=-267
-selected_default_debugger_tab_idx=1
+center_split_offset=-257
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
@@ -44,10 +44,10 @@ position=Vector2i(1281, 31)
 
 [ScriptEditor]
 
-open_scripts=["res://src/enemies/basic_enemy.gd", "res://src/camera.gd", "res://src/enemies/hybrid_enemy.gd", "res://src/interactable_object.gd", "res://src/enemies/long_range_enemy.gd", "res://src/enemies/melee_diver_enemy.gd", "res://src/player.gd", "res://src/player_state_machine.gd"]
-selected_script="res://src/enemies/basic_enemy.gd"
+open_scripts=["res://src/AimCone.gd", "res://src/enemies/basic_enemy.gd", "res://src/camera.gd", "res://src/enemies/hybrid_enemy.gd", "res://src/interactable_object.gd", "res://src/enemies/long_range_enemy.gd", "res://src/enemies/melee_diver_enemy.gd", "res://src/player.gd", "res://src/player_state_machine.gd"]
+selected_script="res://src/player.gd"
 open_help=[]
-script_split_offset=174
+script_split_offset=100
 list_split_offset=0
 zoom_factor=1.0
 
@@ -58,9 +58,9 @@ floating_window_screen=0
 
 [ShaderEditor]
 
-open_shaders=["res://lib/shaders/snowfall.gdshader", "res://lib/shaders/water.gdshader"]
+open_shaders=["res://lib/shaders/snowfall.gdshader", "res://lib/shaders/water.gdshader", "res://lib/shaders/AimConeGrad.gdshader", "res://lib/shaders/night_sky.gdshader", "res://lib/shaders/fire.gdshader", "res://lib/shaders/god_ray.gdshader"]
 split_offset=200
-selected_shader="res://lib/shaders/water.gdshader"
+selected_shader="res://lib/shaders/snowfall.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
