--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 85,
+"column": 10,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 32,
-"row": 55,
-"scroll_position": 41.0,
-"selection": true,
-"selection_from_column": 42,
-"selection_from_line": 55,
-"selection_to_column": 85,
-"selection_to_line": 55,
+"h_scroll_position": 0,
+"row": 84,
+"scroll_position": 75.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 47,
-"scroll_position": 26.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 47,
+"row": 35,
+"scroll_position": 21.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -117,7 +109,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 70,
-"scroll_position": 54.0,
+"scroll_position": 63.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -187,11 +179,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 13,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 149,
-"scroll_position": 127.0,
+"h_scroll_position": 45,
+"row": 66,
+"scroll_position": 56.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -205,7 +197,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 48,
-"scroll_position": 27.999999999999996,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -219,7 +211,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 42,
-"scroll_position": 22.999999999999996,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -229,11 +221,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 12.999999999999996,
+"row": 37,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/AimCone.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 51,
+"scroll_position": 34.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
